--- a/css/style.css
+++ b/css/style.css
@@ -21,23 +21,41 @@ a {
 header {
     border-bottom: 1px solid white;
     text-align: center;
-    padding: 10px 20px;
+    padding: 1rem 2rem;
     position: sticky;
     top: 0;
     background-color: black;
 }
 
 .logo {
-    width: 150px;
+    width: 10rem;
     background-color: #fff5ee;
-    margin: 10px;
+    margin: 1rem;
 }
 
 nav ul li {
     list-style: none;
     display: inline-block;
-    margin: 10px;
+    margin: 0.5rem 0rem;
 }
+
+nav ul li a {
+    padding: 0.5rem 0.5rem;
+}
+
+[aria-current]:not([aria-current="false"]) {
+    background-color: darkslategrey;
+    border-radius: 5rem;
+    &:hover {
+        background-color: rgb(31, 51, 51);
+    }
+}
+
+nav ul li a:hover {
+    background-color: hsla(195, 83%, 58%, 0.2);
+    border-radius: 5rem;
+}
+
 
 /* Main */
 
